tests/snapshots/wallets/sweep_active_address/missing_param.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - wallets
    - sweep-active-address
    - wallet
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <TO_ADDRESS>

Usage: kermit wallets sweep-active-address <WALLET_NAME> <TO_ADDRESS>

For more information, try '--help'.
