tests/snapshots/wallets/sweep_active_address/no_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - wallets
    - sweep-active-address
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <WALLET_NAME>
  <TO_ADDRESS>

Usage: kermit wallets sweep-active-address <WALLET_NAME> <TO_ADDRESS>

For more information, try '--help'.
