tests/snapshots/wallets/sweep_active_address/not_exists.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - wallets
    - sweep-active-address
    - foo
    - 1DrDyTr9RpRsQnDnXo2YRiPzPW4ooHX5LLoqXrqfMrpQH
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: foo not found
